# HexBitAnalysis

./: CMakeLists.txt  HexBitAnalysis.desktop  HexBitAnalysis.pro  README.md  analsiswidget.cpp  analsiswidget.h  appicon.rc  binarywidget.cpp  binarywidget.h  fontdialog.cpp  fontdialog.h  hexbitanalysis.cpp  hexbitanalysis.h  hexbitanalysis.ui  image.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mousegroupbox.cpp  mousegroupbox.h  myWidget.cpp  mywidget.cpp  mywidget.h  selectedwidget.cpp  selectedwidget.h  util.h
.github/workflows/: linux.yml  msys2.yml  windows-mingw.yml  windows.yml
ci/: windows-mingw-publish.ps1  windows-publish.ps1
icon/: image.qrc
scripts/: windows-publish.ps1
src/: analsiswidget.cpp  analsiswidget.h  binarywidget.cpp  binarywidget.h  main.cpp  mainwindow.cpp  mainwindow.h  selectedwidget.cpp  selectedwidget.h  util.cpp  util.h
src/widget/: bitdialog.cpp  bitdialog.h  controlbutton.cpp  controlbutton.h  fontdialog.cpp  fontdialog.h  mousegroupbox.cpp
